--- a/css/prtfolio.css
+++ b/css/prtfolio.css
@@ -18,6 +18,11 @@
   background-color: var(--header-text-color--active);
 }
 
+.portfolio {
+  margin-top: 94px;
+  margin-bottom: 94px;
+}
+
 .portfolio-img {
   width: 370px;
   height: 294px;
