--- a/css/styles.css
+++ b/css/styles.css
@@ -18,16 +18,37 @@
   box-sizing: border-box;
 }
 
-body {
-  font-family: var(--main-font);
-}
-
 a {
   text-decoration: none;
 }
 
 ul {
   list-style-type: none;
+}
+
+img {
+  display: block;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+  padding: 0;
+}
+
+.container {
+  width: 1170px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+body {
+  font-family: var(--main-font);
 }
 
 .page-header .logo {
