--- a/css/styles.css
+++ b/css/styles.css
@@ -42,9 +42,11 @@ p {
 }
 
 .container {
-  width: 1170px;
+  width: 1200px;
   margin-left: auto;
   margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 body {
