--- a/css/index.css
+++ b/css/index.css
@@ -4,6 +4,22 @@
   margin-bottom: 94px;
 }
 
+.header {
+  padding-top: 25px;
+  padding-bottom: 25px;
+}
+
+.logo {
+  align-items: center;
+}
+
+.hero .container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 30px;
+}
+
 .hero-button {
   font-weight: 700;
   font-size: 16px;
@@ -28,22 +44,32 @@
   text-transform: uppercase;
   text-align: center;
   color: var(--color-text-white);
-  margin-bottom: 30px;
 }
 
 .benefits {
   margin-bottom: 94px;
 }
 
-.benefit-title {
+.benefits-list {
+  display: flex;
+  gap: 30px;
+  justify-content: space-between;
+}
+
+.benefits-item {
+  width: calc((100% - 90px) / 4);
+}
+
+.benefits-title {
   font-weight: 700;
   font-size: 14px;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--background-dark);
+  margin-bottom: 10px;
 }
 
-.benefit-description {
+.benefits-description {
   font-weight: 400;
   font-size: 14px;
   line-height: 171%;
@@ -55,16 +81,26 @@
   margin-bottom: 94px;
 }
 
+.employ-list {
+  display: flex;
+  justify-content: space-between;
+}
+
+.employ-item {
+  width: calc((100% - 60px) / 3);
+}
+
 .employ-title {
   font-weight: 700;
   font-size: 36px;
   letter-spacing: 0.03em;
   text-align: center;
   color: var(--background-dark);
+  margin-bottom: 50px;
 }
 
 .employ-img {
-  width: 370px;
+  width: 100%;
   height: 294px;
 }
 
@@ -75,25 +111,39 @@
   padding-bottom: 94px;
 }
 
+.team-list {
+  display: flex;
+  justify-content: space-between;
+  gap: 30px;
+}
+
+.team-item {
+  width: calc((100% - 90px) / 4);
+  padding: 30px 0;
+}
+
 .team-title {
   font-weight: 700;
   font-size: 36px;
   letter-spacing: 0.03em;
   text-align: center;
   color: var(--background-dark);
+  margin-bottom: 50px;
 }
 
 .team-img {
-  width: 270px;
+  width: 100%;
   height: 260px;
+  margin-bottom: 30px;
 }
 
-.title-name {
+.team-name {
   font-weight: 500;
   font-size: 16px;
   letter-spacing: 0.03em;
   text-align: center;
   color: var(--background-dark);
+  margin-bottom: 10px;
 }
 
 .team-position {
