--- a/css/styles.css
+++ b/css/styles.css
@@ -24,6 +24,8 @@ a {
 
 ul {
   list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
 
 img {
@@ -53,12 +55,24 @@ body {
   font-family: var(--main-font);
 }
 
+.page-header {
+  display: flex;
+  justify-content: space-between;
+}
+
+.logo-group {
+  display: flex;
+  gap: 93px;
+  align-items: center;
+}
+
 .page-header .logo {
   font-family: var(--second-family);
   font-weight: 700;
   font-size: 26px;
   letter-spacing: 0.03em;
   color: var(--header-text-color--active);
+  padding: 24px 0;
 }
 
 .page-header .logo-decor {
@@ -72,6 +86,12 @@ body {
   color: var(--main-text);
 }
 
+.header-nav .nav-list {
+  display: flex;
+  gap: 50px;
+  align-items: center;
+}
+
 .page-header .nav-link:hover,
 .page-header .nav-link:focus {
   color: var(--header-text-color--active);
@@ -79,6 +99,12 @@ body {
 
 .page-header .nav-link.active {
   color: var(--header-text-color--active);
+}
+
+.page-header .contacts-list {
+  display: flex;
+  gap: 50px;
+  align-items: center;
 }
 
 .page-header .contacts-link {
@@ -95,11 +121,13 @@ body {
 }
 
 .page-footer .logo {
+  display: inline-block;
   font-family: var(--second-family);
   font-weight: 700;
   font-size: 26px;
   letter-spacing: 0.03em;
   color: #2196f3;
+  margin-bottom: 20px;
 }
 
 .page-footer .logo-decor {
@@ -125,13 +153,20 @@ body {
   color: var(--header-text-color--active);
 }
 
-.address-link {
+.page-footer .address-link {
+  display: block;
   font-family: var(--font-family);
-  font-weight: 400;
+  font-weight: 0;
   font-size: 14px;
   line-height: 171%;
   letter-spacing: 0.03em;
   color: var(--color-text-white);
+  margin-bottom: 10px;
+}
+.page-footer .address-list {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 
 .footer-address:hover,
