--- a/css/index.css
+++ b/css/index.css
@@ -4,11 +4,6 @@
   margin-bottom: 94px;
 }
 
-.header {
-  padding-top: 25px;
-  padding-bottom: 25px;
-}
-
 .logo {
   align-items: center;
 }
@@ -119,7 +114,6 @@
 
 .team-item {
   width: calc((100% - 90px) / 4);
-  padding: 30px 0;
 }
 
 .team-title {
@@ -134,7 +128,11 @@
 .team-img {
   width: 100%;
   height: 260px;
-  margin-bottom: 30px;
+}
+
+.team-info {
+  background-color: var(--color-text-white);
+  padding: 30px 0;
 }
 
 .team-name {
