--- a/css/prtfolio.css
+++ b/css/prtfolio.css
@@ -39,13 +39,16 @@
 
 .card-item {
   width: calc((100% - 60px) / 3);
-  padding-bottom: 20px;
 }
 
 .card-img {
   width: 100%;
   height: 294px;
-  margin-bottom: 20px;
+}
+
+.card-content {
+  padding: 20px 24px;
+  border: 1px solid var(--color-border-portfilio);
 }
 
 .card-title {
