--- a/css/prtfolio.css
+++ b/css/prtfolio.css
@@ -33,17 +33,15 @@
 .card-list {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
   gap: 30px;
 }
 
 .card-item {
-  width: calc((100% - 60px) / 3);
+  flex-basis: calc((100% - 60px) / 3);
 }
 
 .card-img {
   width: 100%;
-  height: 294px;
 }
 
 .card-content {
