--- a/css/styles.css
+++ b/css/styles.css
@@ -50,6 +50,7 @@ p {
   margin-right: auto;
   padding-left: 15px;
   padding-right: 15px;
+  outline: 1px solid red;
 }
 
 body {
@@ -57,7 +58,6 @@ body {
 }
 
 .page-header {
-  display: flex;
   padding: 24px 0;
 }
 
@@ -66,20 +66,25 @@ body {
   align-items: center;
 }
 
-.page-header .logo {
+.header-logo {
+  display: inline-block;
   font-family: var(--second-family);
   font-weight: 700;
   font-size: 26px;
   letter-spacing: 0.03em;
-  color: var(--header-text-color--active);
+  color: #2196f3;
   margin-right: 93px;
 }
 
-.page-header .logo-decor {
+.header-decor {
+  font-family: var(--second-family);
+  font-weight: 700;
+  font-size: 26px;
+  letter-spacing: 0.03em;
   color: var(--color-black);
 }
 
-.page-header .nav-link {
+.nav-link {
   font-weight: 500;
   font-size: 14px;
   letter-spacing: 0.02em;
@@ -91,46 +96,49 @@ body {
   gap: 50px;
 }
 
-.page-header .nav-link:hover,
-.page-header .nav-link:focus {
+.nav-link:hover,
+.nav-link:focus {
   color: var(--header-text-color--active);
 }
 
-.page-header .nav-link.active {
+.nav-link.active {
   color: var(--header-text-color--active);
 }
 
-.page-header .contacts-list {
+.footer-logo {
+  font-family: var(--second-family);
+  font-weight: 700;
+  font-size: 26px;
+  letter-spacing: 0.03em;
+  color: var(--header-text-color--active);
+}
+
+.contacts-list {
   display: flex;
   gap: 50px;
   margin-left: auto;
 }
 
-.page-header .contacts-link {
+.contacts-link {
   font-weight: 500;
   font-size: 14px;
   letter-spacing: 0.02em;
   color: var(--color-address);
 }
 
-.page-header .contacts-link:hover,
-.page-header .contacts-link:focus,
-.page-header .contacts-link.active {
+.contacts-link:hover,
+.contacts-link:focus,
+.contacts-link.active {
   color: var(--header-text-color--active);
 }
 
-.page-footer .logo {
-  display: inline-block;
-  font-family: var(--second-family);
-  font-weight: 700;
-  font-size: 26px;
-  letter-spacing: 0.03em;
-  color: #2196f3;
-  margin-bottom: 20px;
+.logo-decor {
+  color: var(--color-text-white);
 }
 
-.page-footer .logo-decor {
-  color: var(--color-text-white);
+.footer-address {
+  font-style: normal;
+  margin-top: 20px;
 }
 
 .page-footer {
@@ -139,20 +147,20 @@ body {
   padding-top: 60px;
 }
 
-.page-footer .contacts-link {
+.contacts-link {
   font-weight: 500;
   font-size: 14px;
   letter-spacing: 0.02em;
   color: var(--color-address);
 }
 
-.page-footer .contacts-link:hover,
-.page-footer .contacts-link:focus,
-.page-footer .contacts-link.active {
+.contacts-link:hover,
+.contacts-link:focus,
+.contacts-link.active {
   color: var(--header-text-color--active);
 }
 
-.page-footer .address-link {
+.address-link {
   display: block;
   font-family: var(--font-family);
   font-weight: 0;
@@ -162,7 +170,7 @@ body {
   color: var(--color-text-white);
   margin-bottom: 10px;
 }
-.page-footer .address-list {
+.address-list {
   display: flex;
   flex-direction: column;
   gap: 10px;
