--- a/css/index.css
+++ b/css/index.css
@@ -40,6 +40,30 @@
   padding-top: 94px;
 }
 
+.benefits-item::before {
+  content: "";
+  display: block;
+  height: 120px;
+  width: 270px;
+  background-color: var(--background-light);
+  background-image: url(../imges/antenna.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  margin-bottom: 30px;
+}
+
+.benefits-item:nth-child(2)::before {
+  background-image: url(../imges/clock.png);
+}
+
+.benefits-item:nth-child(3)::before {
+  background-image: url(../imges/diagram.png);
+}
+
+.benefits-item:nth-child(4)::before {
+  background-image: url(../imges/astronaut.png);
+}
+
 .benefits-list {
   display: flex;
   gap: 30px;
