fix bags photos

--- a/css/index.css
+++ b/css/index.css
@@ -46,7 +46,7 @@
   height: 120px;
   width: 270px;
   background-color: var(--background-light);
-  background-image: url(../imges/antenna.svg);
+  background-image: url(../imges/antena.png);
   background-repeat: no-repeat;
   background-position: center;
   margin-bottom: 30px;
