--- a/css/index.css
+++ b/css/index.css
@@ -19,6 +19,8 @@
   border: none;
   cursor: pointer;
   padding: 10px 32px;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
 }
 
 .hero-title {
