--- a/css/prtfolio.css
+++ b/css/prtfolio.css
@@ -28,6 +28,8 @@
 .filter-button:focus {
   color: var(--color-text-white);
   background-color: var(--header-text-color--active);
+  box-shadow: 0px 3px 1px 0px rgba(0, 0, 0, 0.1),
+    0px 1px 2px 0px rgba(0, 0, 0, 0.08), 0px 2px 2px 0px rgba(0, 0, 0, 0.12);
 }
 
 .card-list {
@@ -38,6 +40,12 @@
 
 .card-item {
   flex-basis: calc((100% - 60px) / 3);
+}
+
+.card-item:hover,
+.card-item:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .card-img {
