--- a/css/index.css
+++ b/css/index.css
@@ -2,6 +2,13 @@
   background-color: var(--color-background-hero);
   padding: 200px 0;
   text-align: center;
+  background-image: linear-gradient(
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url(../imges/hero.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .logo {
