--- a/css/index.css
+++ b/css/index.css
@@ -140,6 +140,12 @@
   font-size: 14px;
   padding: 27px 0;
   text-align: center;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  letter-spacing: 0.42px;
+  text-transform: uppercase;
 }
 
 .team {
