--- a/css/styles.css
+++ b/css/styles.css
@@ -238,3 +238,49 @@ body {
 .socialmedia-footerlink:active {
   background-color: var(--header-text-color--active);
 }
+
+.footer-title-2 {
+  color: var(--color-text-white);
+  font-size: 14px;
+  font-weight: 700;
+  letter-spacing: 0.42px;
+  text-transform: uppercase;
+  padding-top: 12px;
+}
+
+.footer-form-2 {
+  display: flex;
+  gap: 12px;
+  margin-top: 20px;
+  align-items: center;
+}
+
+.footer-input {
+  width: 358px;
+  height: 50px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+  background-color: var(--color-background-hero);
+  color: var(--color-text-white);
+  padding-left: 16px;
+}
+
+.footer-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 200px;
+  height: 50px;
+  background-color: var(--header-text-color--active);
+  color: var(--color-text-white);
+  border-radius: 4px;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  border: none;
+  cursor: pointer;
+}
+
+.footer-icon {
+  width: 24px;
+  height: 24px;
+  margin-left: 10px;
+}
