--- a/css/styles.css
+++ b/css/styles.css
@@ -92,6 +92,20 @@ body {
   color: var(--main-text);
 }
 
+.nav-link::after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 4px;
+  background-color: var(--header-text-color--active);
+  border-radius: 2px;
+  margin-top: 28px;
+}
+
+.nav-link.current {
+  color: var(--header-text-color--active);
+}
+
 .nav-list {
   display: flex;
   gap: 50px;
